force-app/main/default/objects/Opportunity/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aanvraag docentenpakket</fullName>
            </value>
            <value>
                <fullName>AA - Other</fullName>
            </value>
            <value>
                <fullName>Accountmanager</fullName>
            </value>
            <value>
                <fullName>Accountmanager visit</fullName>
            </value>
            <value>
                <fullName>BEX-aanvraag</fullName>
            </value>
            <value>
                <fullName>BEX-koerier</fullName>
            </value>
            <value>
                <fullName>Boekenlijst BME</fullName>
            </value>
            <value>
                <fullName>Boekenlijst Iddink</fullName>
            </value>
            <value>
                <fullName>Boekenlijst retail</fullName>
            </value>
            <value>
                <fullName>Boekenlijst VDE</fullName>
            </value>
            <value>
                <fullName>Bop automaat</fullName>
            </value>
            <value>
                <fullName>Breuker TM bureau</fullName>
            </value>
            <value>
                <fullName>BVE Copy</fullName>
            </value>
            <value>
                <fullName>Cross en upsell</fullName>
            </value>
            <value>
                <fullName>Customer call</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>De Rolf Groep / Reinders</fullName>
            </value>
            <value>
                <fullName>Direct mail</fullName>
            </value>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>Event attendance</fullName>
            </value>
            <value>
                <fullName>Heutink</fullName>
            </value>
            <value>
                <fullName>IVP</fullName>
            </value>
            <value>
                <fullName>KG &amp; Rolf</fullName>
            </value>
            <value>
                <fullName>LMO lijst</fullName>
            </value>
            <value>
                <fullName>Mail campaign</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>MBO Copy</fullName>
            </value>
            <value>
                <fullName>Methode Oriëntatie Dag</fullName>
            </value>
            <value>
                <fullName>NOT 2015</fullName>
            </value>
            <value>
                <fullName>NOT 2017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>