force-app/main/default/objects/Opportunity/fields/SRMEstimatedAmount__c.field-meta.xml
<CustomField>
    <fullName>SRMEstimatedAmount__c</fullName>
    <label>SRM Estimated Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>