force-app/main/default/objects/Opportunity/fields/SRMOpenDate__c.field-meta.xml
<CustomField>
    <fullName>SRMOpenDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>