force-app/main/default/objects/Opportunity/fields/SRMOPPNRID__c.field-meta.xml
<CustomField>
    <fullName>SRMOPPNRID__c</fullName>
    <description>ID-field for input Selligent</description>
    <label>SRMOPPNRID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>