force-app/main/default/objects/Opportunity/fields/SRMOPPPE0NRID__c.field-meta.xml
<CustomField>
    <fullName>SRMOPPPE0NRID__c</fullName>
    <description>ID-field for input Selligent</description>
    <label>SRMOPPPE0NRID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>