force-app/main/default/objects/Opportunity/fields/SRMOPPRID__c.field-meta.xml
<CustomField>
    <fullName>SRMOPPRID__c</fullName>
    <description>Field for input Selligent</description>
    <label>SRMOPPRID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>