force-app/main/default/objects/Opportunity/fields/SRMOPPRMOD__c.field-meta.xml
<CustomField>
    <fullName>SRMOPPRMOD__c</fullName>
    <description>Field for input Selligent</description>
    <label>SRMOPPRMOD</label>
    <length>32</length>
    <type>Text</type>
</CustomField>