force-app/main/default/objects/Opportunity/fields/SRMOPPSO0NRID__c.field-meta.xml
<CustomField>
    <fullName>SRMOPPSO0NRID__c</fullName>
    <description>ID-field for input Selligent</description>
    <label>SRMOPPSO0NRID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>