force-app/main/default/objects/Opportunity/fields/SRMOPPTITULAIRE__c.field-meta.xml
<CustomField>
    <fullName>SRMOPPTITULAIRE__c</fullName>
    <description>Field for input Selligent</description>
    <label>SRMOPPTITULAIRE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>