force-app/main/default/objects/Opportunity/fields/SRMReference__c.field-meta.xml
<CustomField>
    <fullName>SRMReference__c</fullName>
    <description>(R1-S1 by JD): Reference.</description>
    <label>SRM Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>