force-app/main/default/objects/Opportunity/fields/SRMStream__c.field-meta.xml
<CustomField>
    <fullName>SRMStream__c</fullName>
    <description>This is a temporary field, used for the NU SRM Datamigration, to accomodate the field &apos;Stream&apos;</description>
    <label>SRM Stream</label>
    <length>255</length>
    <type>Text</type>
</CustomField>