force-app/main/default/objects/Opportunity/fields/SRMTargetObject__c.field-meta.xml
<CustomField>
    <fullName>SRMTargetObject__c</fullName>
    <description>This is a temporary field, used for the NU SRM Datamigration, to accomodate the field &apos;TO&apos;</description>
    <label>SRM Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>