force-app/main/default/objects/Opportunity/fields/SRMVak__c.field-meta.xml
<CustomField>
    <fullName>SRMVak__c</fullName>
    <description>This is a temporary field, used for the NU SRM Datamigration, to accomodate the field &apos;Vak&apos;</description>
    <label>SRM Vak</label>
    <length>255</length>
    <type>Text</type>
</CustomField>