force-app/main/default/objects/Opportunity/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Only for Informat Plantyn. Date to start with the program</description>
    <inlineHelpText>Startdatum</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>