force-app/main/default/objects/Opportunity/fields/TargetStream__c.field-meta.xml
<CustomField>
    <fullName>TargetStream__c</fullName>
    <label>Target Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>hv ob</fullName>
            </value>
            <value>
                <fullName>hv tf</fullName>
            </value>
            <value>
                <fullName>vmbo bb</fullName>
            </value>
            <value>
                <fullName>vmbo ob</fullName>
            </value>
            <value>
                <fullName>HAVO TF</fullName>
            </value>
            <value>
                <fullName>VWO TF</fullName>
            </value>
            <value>
                <fullName>04/Aug</fullName>
                <isActive>false</isActive>
                <label>04/Aug</label>
            </value>
            <value>
                <fullName>07/Aug</fullName>
                <isActive>false</isActive>
                <label>07/Aug</label>
            </value>
            <value>
                <fullName>1F</fullName>
                <isActive>false</isActive>
                <label>1F</label>
            </value>
            <value>
                <fullName>1F/2F</fullName>
                <isActive>false</isActive>
                <label>1F/2F</label>
            </value>
            <value>
                <fullName>2F</fullName>
                <isActive>false</isActive>
                <label>2F</label>
            </value>
            <value>
                <fullName>3F</fullName>
                <isActive>false</isActive>
                <label>3F</label>
            </value>
            <value>
                <fullName>4/8</fullName>
                <isActive>false</isActive>
                <label>4/8</label>
            </value>
            <value>
                <fullName>5/6</fullName>
                <isActive>false</isActive>
                <label>5/6</label>
            </value>
            <value>
                <fullName>7/8</fullName>
                <isActive>false</isActive>
                <label>7/8</label>
            </value>
            <value>
                <fullName>BB</fullName>
                <isActive>false</isActive>
                <label>BB</label>
            </value>
            <value>
                <fullName>BWI</fullName>
                <isActive>false</isActive>
                <label>BWI</label>
            </value>
            <value>
                <fullName>OB</fullName>
                <isActive>false</isActive>
                <label>OB</label>
            </value>
            <value>
                <fullName>PIE</fullName>
                <isActive>false</isActive>
                <label>PIE</label>
            </value>
            <value>
                <fullName>hv ob klas 1</fullName>
                <isActive>false</isActive>
                <label>hv ob klas 1</label>
            </value>
            <value>
                <fullName>hv ob klas 2</fullName>
                <isActive>false</isActive>
                <label>hv ob klas 2</label>
            </value>
            <value>
                <fullName>leerjaar 3</fullName>
                <isActive>false</isActive>
                <label>leerjaar 3</label>
            </value>
            <value>
                <fullName>leerjaar 3-4</fullName>
                <isActive>false</isActive>
                <label>leerjaar 3-4</label>
            </value>
            <value>
                <fullName>leerjaar 4</fullName>
                <isActive>false</isActive>
                <label>leerjaar 4</label>
            </value>
            <value>
                <fullName>niveau 1</fullName>
                <isActive>false</isActive>
                <label>niveau 1</label>
            </value>
            <value>
                <fullName>niveau 1-2</fullName>
                <isActive>false</isActive>
                <label>niveau 1-2</label>
            </value>
            <value>
                <fullName>niveau 1-4</fullName>
                <isActive>false</isActive>
                <label>niveau 1-4</label>
            </value>
            <value>
                <fullName>niveau 2</fullName>
                <isActive>false</isActive>
                <label>niveau 2</label>
            </value>
            <value>
                <fullName>niveau 2-3</fullName>
                <isActive>false</isActive>
                <label>niveau 2-3</label>
            </value>
            <value>
                <fullName>niveau 2-4</fullName>
                <isActive>false</isActive>
                <label>niveau 2-4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>