force-app/main/default/objects/Opportunity/fields/Temp2Amount__c.field-meta.xml
<CustomField>
    <fullName>Temp2Amount__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp2Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>