force-app/main/default/objects/Opportunity/fields/TempAmount__c.field-meta.xml
<CustomField>
    <fullName>TempAmount__c</fullName>
    <formula>NumberOfStudents__c *  PricePerPupil__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TempAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>