force-app/main/default/objects/Opportunity/fields/TempDelta__c.field-meta.xml
<CustomField>
    <fullName>TempDelta__c</fullName>
    <formula>TempAmount__c -  Temp2Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TempDelta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>