force-app/main/default/objects/Opportunity/fields/TMPAmount__c.field-meta.xml
<CustomField>
    <fullName>TMPAmount__c</fullName>
    <description>This field is used to store the amount value for VO Noordhoff opportunities as part of OPL update. Contact Bas Drent and or Mark Julsing form more information.</description>
    <inlineHelpText>This field is used to store the amount value for VO Noordhoff opportunities as part of OPL update. Contact Bas Drent and or Mark Julsing form more information.</inlineHelpText>
    <label>TMP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>