force-app/main/default/objects/Opportunity/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <description>Total amount of the opportunity for the whole period, based on the value of opportunity products.</description>
    <inlineHelpText>Total amount of the opportunity for the whole period, based on the value of opportunity products.</inlineHelpText>
    <label>Total Amount</label>
    <summarizedField>OpportunityLineItem.Total_Amount__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>