force-app/main/default/objects/Opportunity/fields/TravelExpenses__c.field-meta.xml
<CustomField>
    <fullName>TravelExpenses__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Are travel expenses covered?</description>
    <label>Travel Expenses</label>
    <type>Checkbox</type>
</CustomField>