force-app/main/default/objects/Opportunity/fields/WeightedScore__c.field-meta.xml
<CustomField>
    <fullName>WeightedScore__c</fullName>
    <inlineHelpText>This is an adjusted opportunity score that takes into account both the opportunity&apos;s inherent score and the extent of lead interactions (traction).</inlineHelpText>
    <label>WeightedScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>