force-app/main/default/objects/Opportunity/fields/xLicenseProducts__c.field-meta.xml
<CustomField>
    <fullName>xLicenseProducts__c</fullName>
    <description>Calculated Total number of OpportunityLineItems (Products), 
WHERE Product.RecordType = Recurring Invoicing&apos;, 
related to this Opportunity.</description>
    <label># License Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.OpportunityLineProductRenewalBoolean__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>