force-app/main/default/objects/Opportunity/fields/Year1__c.field-meta.xml
<CustomField>
    <fullName>Year1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Year 1</label>
    <type>Checkbox</type>
</CustomField>