force-app/main/default/objects/Opportunity/fields/Year3__c.field-meta.xml
<CustomField>
    <fullName>Year3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Year 3</label>
    <type>Checkbox</type>
</CustomField>