force-app/main/default/objects/Opportunity/fields/Year4__c.field-meta.xml
<CustomField>
    <fullName>Year4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Year 4</label>
    <type>Checkbox</type>
</CustomField>