force-app/main/default/objects/Opportunity/fields/ZendeskId__c.field-meta.xml
<CustomField>
    <fullName>ZendeskId__c</fullName>
    <label>Zendesk Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>