force-app/main/default/objects/Opportunity/recordTypes/IL.recordType-meta.xml
<RecordType>
    <fullName>IL</fullName>
    <active>true</active>
    <businessProcess>MainProcess</businessProcess>
    <label>IL</label>
</RecordType>