force-app/main/default/objects/Opportunity/recordTypes/Liber.recordType-meta.xml
<RecordType>
    <fullName>Liber</fullName>
    <active>true</active>
    <businessProcess>Liber Sales Process</businessProcess>
    <label>Liber</label>
</RecordType>