force-app/main/default/objects/Opportunity/recordTypes/Liber_School_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Liber_School_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Sales Process %28Liber - Schools%29</businessProcess>
    <label>Liber School Opportunity</label>
</RecordType>