force-app/main/default/objects/Opportunity/recordTypes/Liber_University_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Liber_University_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Sales Process %28Liber - Universities%29</businessProcess>
    <label>Liber University Opportunity</label>
</RecordType>