force-app/main/default/objects/Opportunity/recordTypes/Noordhoff.recordType-meta.xml
<RecordType>
    <fullName>Noordhoff</fullName>
    <active>true</active>
    <businessProcess>Noordhoff Sales Process</businessProcess>
    <label>Noordhoff</label>
</RecordType>