force-app/main/default/objects/Opportunity/recordTypes/NoordhoffBAO.recordType-meta.xml
<RecordType>
    <fullName>NoordhoffBAO</fullName>
    <active>true</active>
    <businessProcess>Noordhoff Sales Process</businessProcess>
    <label>Noordhoff BAO</label>
</RecordType>