force-app/main/default/objects/Opportunity/recordTypes/NoordhoffHO.recordType-meta.xml
<RecordType>
    <fullName>NoordhoffHO</fullName>
    <active>true</active>
    <businessProcess>Noordhoff Sales Process</businessProcess>
    <label>Noordhoff HO</label>
</RecordType>