force-app/main/default/objects/Opportunity/recordTypes/NoordhoffMBO.recordType-meta.xml
<RecordType>
    <fullName>NoordhoffMBO</fullName>
    <active>true</active>
    <businessProcess>Noordhoff Sales Process</businessProcess>
    <label>Noordhoff MBO</label>
</RecordType>