force-app/main/default/objects/Opportunity/recordTypes/NoordhoffVO.recordType-meta.xml
<RecordType>
    <fullName>NoordhoffVO</fullName>
    <active>true</active>
    <businessProcess>Noordhoff Sales Process</businessProcess>
    <label>Noordhoff VO</label>
</RecordType>