force-app/main/default/objects/Opportunity/recordTypes/NoordhoffZorg.recordType-meta.xml
<RecordType>
    <fullName>NoordhoffZorg</fullName>
    <active>true</active>
    <businessProcess>Noordhoff Zorg</businessProcess>
    <label>Noordhoff Zorg</label>
</RecordType>