force-app/main/default/objects/Opportunity/recordTypes/Plantyn.recordType-meta.xml
<RecordType>
    <fullName>Plantyn</fullName>
    <active>true</active>
    <businessProcess>Plantyn Sales Process</businessProcess>
    <label>Plantyn</label>
</RecordType>