force-app/main/default/objects/Opportunity/recordTypes/Professional.recordType-meta.xml
<RecordType>
    <fullName>Professional</fullName>
    <active>true</active>
    <businessProcess>Professional</businessProcess>
    <label>Professional</label>
</RecordType>