force-app/main/default/objects/Opportunity/recordTypes/Zorg.recordType-meta.xml
<RecordType>
    <fullName>Zorg</fullName>
    <active>true</active>
    <businessProcess>Professional</businessProcess>
    <label>Zorg</label>
</RecordType>