force-app/main/default/objects/Opportunity/validationRules/CustomerRelationshipRequiredProfessional.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomerRelationshipRequiredProfessional</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT(CustomerRelationship__c)),RecordType.DeveloperName = &apos;Professional&apos;)</errorConditionFormula>
    <errorMessage>Customer Relationship Required for Professionalopportunities</errorMessage>
</ValidationRule>