force-app/main/default/objects/Opportunity/validationRules/CustomerRelationshipRequiredZorg.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomerRelationshipRequiredZorg</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT(CustomerRelationship__c)),RecordType.DeveloperName = &apos;Zorg&apos;)</errorConditionFormula>
    <errorMessage>Customer Relationship Required for Zorgopportunities</errorMessage>
</ValidationRule>