force-app/main/default/objects/Opportunity/validationRules/NHProfessionalApprovalBeforeClosedStage.validationRule-meta.xml
<ValidationRule>
    <fullName>NHProfessionalApprovalBeforeClosedStage</fullName>
    <active>true</active>
    <description>Proof that an Approval Process was triggered before a Status/Stage can be set as Closed Won.</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(ApprovalStatus__c , &quot;Approved&quot;)), 
    OpportunityRecordTypeName__c = &quot;Professional&quot;, 
    ISCHANGED(StageName), 
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    NOT($User.ValidationRulesDoNotApply__c  = true),
    $UserRole.Name != &apos;Noordhoff Professional MBO HBO Sales User&apos;
)</errorConditionFormula>
    <errorMessage>There was no Approval requested, the Opportunity cannot move to Stage: Closed Won. Please contact your System Administrator for support.</errorMessage>
</ValidationRule>