force-app/main/default/objects/Opportunity/validationRules/NHProfessionalInactiveProducts.validationRule-meta.xml
<ValidationRule>
    <fullName>NHProfessionalInactiveProducts</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OpportunityRecordTypeName__c = &quot;Professional&quot;, 
    ISCHANGED(StageName), 
    ISPICKVAL(StageName, &quot;Closed Won&quot;), 
    Inactive_Product_Count__c &gt; 0,
    NOT($User.ValidationRulesDoNotApply__c  = true)
)</errorConditionFormula>
    <errorMessage>Cannot set Stage to Closed Won, there are 1 or more Inactive Opportunity Products.</errorMessage>
</ValidationRule>