force-app/main/default/objects/Opportunity/validationRules/NHProfessionalOpportunityNameLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>NHProfessionalOpportunityNameLimit</fullName>
    <active>true</active>
    <description>Prevents the user from creating an Opportunity Name with a longer than 80 character limit same as is the Contract Name limit (Opportunity name copied to Contract name)</description>
    <errorConditionFormula>AND(
    OpportunityRecordTypeName__c = &quot;Professional&quot;, 
    LEN(Name) &gt; 80 
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The Opportunity Name cannot be longer than 80 characters for Professional</errorMessage>
</ValidationRule>