force-app/main/default/objects/Opportunity/validationRules/NHProfessionalOpportunityProductRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>NHProfessionalOpportunityProductRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OpportunityRecordTypeName__c = &quot;Professional&quot;, 
    LineItemCount__c = 0, 
  OR(
     ISPICKVAL(StageName, &quot;P. Quote&quot;), 
     ISPICKVAL(StageName, &quot;P. Negotiation&quot;), 
     ISPICKVAL(StageName, &quot;P. Close&quot;) 
  ),
  $UserRole.Name != &quot;Noordhoff Professional MBO HBO Sales User&quot;
)</errorConditionFormula>
    <errorMessage>The Opportunity cannot move to the next Stage without at least one Opportunity Product linked to the Opportunity.</errorMessage>
</ValidationRule>