force-app/main/default/objects/Opportunity/validationRules/NHZorgCannotEditClosedOpp.validationRule-meta.xml
<ValidationRule>
    <fullName>NHZorgCannotEditClosedOpp</fullName>
    <active>true</active>
    <description>Prevents a user making changes to an Opportunity that was closed won or closed lost.</description>
    <errorConditionFormula>AND(
    OpportunityRecordTypeName__c = &quot;Zorg&quot;, 
    NOT(ISCHANGED(Is_Validation_Bypassed__c)), 
    OR(
       ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;), 
       ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;) 
    ), 
    NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorMessage>You are not allowed to edit an Opportunity that is Closed Won/Closed Lost.</errorMessage>
</ValidationRule>