force-app/main/default/objects/Opportunity/validationRules/NHZorgClosedLostRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>NHZorgClosedLostRequired</fullName>
    <active>true</active>
    <description>Closed Lost Reason Only required when the Opportunity Stage is Closed Lost and not for Closed Won</description>
    <errorConditionFormula>AND(OpportunityRecordTypeName__c = &quot;Zorg&quot;,  
    ISPICKVAL(StageName, &quot;Closed Lost&quot;),
    ISBLANK(TEXT(ReasonLost__c)),
    NOT($User.ValidationRulesDoNotApply__c  = true)
)</errorConditionFormula>
    <errorDisplayField>ReasonLost__c</errorDisplayField>
    <errorMessage>Reason lost/won is required for Stage: Closed Lost.</errorMessage>
</ValidationRule>