force-app/main/default/objects/Opportunity/validationRules/NHZorgFollowUpEvent.validationRule-meta.xml
<ValidationRule>
    <fullName>NHZorgFollowUpEvent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OpportunityRecordTypeName__c = &quot;Noordhoff Zorg&quot;,
    Is_Event_Created__c = False, 
    NOT($User.ValidationRulesDoNotApply__c  = true),
  OR(
     ISPICKVAL(StageName, &quot;P. Qualified&quot;), 
     ISPICKVAL(StageName, &quot;P. Quote&quot;),
     ISPICKVAL(StageName, &quot;P. Negotiation&quot;), 
     ISPICKVAL(StageName, &quot;P. Close&quot;) 
  )
)</errorConditionFormula>
    <errorMessage>The Opportunity cannot move to the next Stage if there is no follow up event or task created.</errorMessage>
</ValidationRule>