force-app/main/default/objects/Opportunity/validationRules/NHZorgIncomingValidate.validationRule-meta.xml
<ValidationRule>
    <fullName>NHZorgIncomingValidate</fullName>
    <active>true</active>
    <description>Should not allow any other Status/Stage other than P. Incoming for new NH Zorg Opportunities.</description>
    <errorConditionFormula>AND(
    ISNEW(), 
    NOT(ISPICKVAL(StageName, &quot;P. Incoming&quot;)), 
    RecordType.Name = &quot;Zorg&quot;,
    NOT($User.ValidationRulesDoNotApply__c  = true)
)</errorConditionFormula>
    <errorMessage>Status: P. Incoming should be the value for a new Opportunity.</errorMessage>
</ValidationRule>